# dialect-sns

./: config.py  main.py  pyproject.toml  requirements.txt
crud/: crud_post.py  crud_reply.py  crud_translation.py  crud_user.py
database/: database.py  models.py  schemas.py
routers/: posts.py  translate.py  users.py
services/: auth_service.py  gemini_service.py
